{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 179,
  "lineage": "29a8504d-7a19-7ae4-c618-aecb47391bea",
  "resources": [
    {
      "module": "module.aws_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "T3ProjectSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:887142107319:security-group/sg-0ef6ee57bb37f6716",
            "description": "Allow SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ef6ee57bb37f6716",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4200
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9966,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9966
              }
            ],
            "name": "T3ProjectSG",
            "name_prefix": "",
            "owner_id": "887142107319",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-005bab01fb0d4aaef"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.T3VPC"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ProjectIG",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:887142107319:internet-gateway/igw-0979e281e532461aa",
            "id": "igw-0979e281e532461aa",
            "owner_id": "887142107319",
            "tags": {
              "Name": "Project Internet Gateway"
            },
            "vpc_id": "vpc-005bab01fb0d4aaef"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.T3VPC"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ProjectRT",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-088220cc4c582638b",
            "owner_id": "887142107319",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0979e281e532461aa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Project Routes Table"
            },
            "vpc_id": "vpc-005bab01fb0d4aaef"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.ProjectIG",
            "module.aws_vpc.aws_vpc.T3VPC"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ProjectRTA",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c69983732ae00e8",
            "route_table_id": "rtb-088220cc4c582638b",
            "subnet_id": "subnet-02ef1f244f24a505c"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.ProjectIG",
            "module.aws_vpc.aws_route_table.ProjectRT",
            "module.aws_vpc.aws_subnet.ProjectSubnet",
            "module.aws_vpc.aws_vpc.T3VPC"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ProjectRTA1",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfaab78fc3ad2a63",
            "route_table_id": "rtb-088220cc4c582638b",
            "subnet_id": "subnet-0cf3ebf10af768f4c"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.ProjectIG",
            "module.aws_vpc.aws_route_table.ProjectRT",
            "module.aws_vpc.aws_subnet.ProjectSubnet1",
            "module.aws_vpc.aws_vpc.T3VPC"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ProjectSubnet",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:887142107319:subnet/subnet-02ef1f244f24a505c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02ef1f244f24a505c",
            "map_public_ip_on_launch": true,
            "owner_id": "887142107319",
            "tags": {
              "Name": "Project Subnet"
            },
            "vpc_id": "vpc-005bab01fb0d4aaef"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.T3VPC"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ProjectSubnet1",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:887142107319:subnet/subnet-0cf3ebf10af768f4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0cf3ebf10af768f4c",
            "map_public_ip_on_launch": true,
            "owner_id": "887142107319",
            "tags": {
              "Name": "Project Subnet"
            },
            "vpc_id": "vpc-005bab01fb0d4aaef"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.T3VPC"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "T3VPC",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:887142107319:vpc/vpc-005bab01fb0d4aaef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d6e87d603b3daeb7",
            "default_route_table_id": "rtb-0198994bcf0d16a43",
            "default_security_group_id": "sg-08cb67a2bdb82d2c3",
            "dhcp_options_id": "dopt-b8bb8ade",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-005bab01fb0d4aaef",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0198994bcf0d16a43",
            "owner_id": "887142107319",
            "tags": {
              "Name": "T3VPC"
            }
          }
        }
      ]
    }
  ]
}